subida primer entrega proyecto final

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto JS</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
-    <h1>Simulador de rutinas</h1>
+<body class="index">
+
+    <h1> INICIO - Simulador de rutinas</h1>
+    <h2><a href="secciones/CRUD_rutina.html">Creador de rutinas</a></h2>
     <h2><a href="secciones/conversor_metros.html">Conversor de metros</a></h2>
+    
     <script src="js/proyecto.js"></script>
 </body>
 </html>
