--- a/secciones/CRUD_rutina.html
+++ b/secciones/CRUD_rutina.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto JS</title>
+    <title> Creador de Rutinas</title>
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="conversor">
-    <h1><a href="../index.html">Inicio</a> </h1>
+<body class="crud">
+    <h1><a href="../index.html">Inicio</a> </h1>    
     <h2><a href="../secciones/CRUD_rutina.html">Creador de rutinas</a></h2>
     <h2><a href="../secciones/conversor_metros.html">Conversor de metros</a></h2>
     
-    <script src="../js/conversor_metros.js"></script>
+    <script src="../js/CRUD_rutina.js"></script>
 </body>
 </html>
