desafio complementario DOM

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Proyecto JS</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body class="index">
+<body id="index">
 
     <h1> INICIO - Simulador de rutinas</h1>
     <h2><a href="secciones/CRUD_rutina.html">Creador de rutinas</a></h2>
