--- a/secciones/conversor_metros.html
+++ b/secciones/conversor_metros.html
@@ -7,7 +7,7 @@
     <title>Proyecto JS</title>
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="conversor">
+<body id="conversor">
     <h1><a href="../index.html">Inicio</a> </h1>
     <h2><a href="../secciones/CRUD_rutina.html">Creador de rutinas</a></h2>
     <h2><a href="../secciones/conversor_metros.html">Conversor de metros</a></h2>
