--- a/secciones/conversor_metros.html
+++ b/secciones/conversor_metros.html
@@ -4,14 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto JS</title>
+    <title>Conversor</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body id="conversor">
-    <h1><a href="../index.html">Inicio</a> </h1>
-    <h2><a href="../secciones/CRUD_rutina.html">Creador de rutinas</a></h2>
-    <h2><a href="../secciones/conversor_metros.html">Conversor de metros</a></h2>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid g-0 d-flex">
+                <a class="navbar-brand" href="#"></a>
+                <button id="hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse d-flex" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto d-flex">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link" href="../secciones/CRUD_rutina.html">Rutinas</a>
+                    <a class="nav-link" href="../secciones/conversor_metros.html">Conversor</a>
+                    
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="d-flex g-0 my-5 mx-auto justify-content-evenly">
+        <button id="btnMetrosA" class="my-2">Conversor de metros a piletas</button>
+        <button id="btnPiletasA" class="my-2">Conversor de piletas a metros</button>
+    </div>   
+    <div class="d-flex g-0 my-2 flex-column align-items-center">  
+        <form action="" id="formMetrosA">
+            <label for="">¿Cuántos metros quieres nadar? </label>
+            <input type="number" name="" id="inputMetrosA"><br><br>
+            <label for="">¿Cuántos metros mide tu pileta de natación?</label>
+            <input type="text" name="" id="inputMetrosPileta"><br><br>
+            <button id="botonEnviarMetrosA" >Enviar</button><br>
+            <h2 id="totalPiletas"></h2>
+        </form>
+    </div>
+    <div class="d-flex g-0 my-2 flex-column align-items-center">
+        <form action="" id="formPiletasA">
+            <label for="">¿Cuántas piletas quieres nadar? </label>
+            <input type="number" name="" id="inputPiletasA"><br><br>
+            <label for="">¿Cuántos metros mide tu pileta de natación?</label>
+            <input type="text" name="" id="inputMetrosPileta2"><br><br>
+            <button id="botonEnviarPiletasA" >Enviar</button><br>
+            <h2 id="totalMetros"></h2>
+        </form>
+    </div>
+
     <script src="../js/conversor_metros.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
