subida de segunda entrega

--- a/secciones/CRUD_rutina.html
+++ b/secciones/CRUD_rutina.html
@@ -30,6 +30,7 @@
         </nav>
     </header>
 
+<h2 id="crudNombre" class="my-0"> </h2>
 
 <div class="d-flex g-0 my-5 mx-auto justify-content-evenly">
     <button id="botonListar"></button>
@@ -38,8 +39,23 @@
     
 </div>
 
-    
+<form id="formularioArmarRutina" action="">
+    <input type="text" placeholder="nombre de tu rutina" name="" id="inputTitulo"> <br>
+    <input type="text" placeholder="entrada en calor" name="" id="inputEntrada"> <br>
+    <input type="text" placeholder="bloque 1" name="" id="inputB1"> <br>
+    <input type="text" placeholder="bloque 2" name="" id="inputB2"> <br>
+    <input type="text" placeholder="bloque 3" name="" id="inputB3"> <br>
+    <input type="text" placeholder="bloque 4" name="" id="inputB4"> <br>
+    <input type="text" placeholder="bloque 5" name="" id="inputB5"> <br>
+    <input type="text" placeholder="bloque 6" name="" id="inputB6"> <br>
+    <input type="text" placeholder="afloje" name="" id="inputAfloje"> <br>
+
+<button id="botonRutinaArmada" >Enviar</button>
+
+</form>
+    <script src="../js/cosas_en_comun.js"></script>
     <script src="../js/CRUD_rutina.js"></script>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
