--- a/secciones/conversor_metros.html
+++ b/secciones/conversor_metros.html
@@ -31,6 +31,9 @@
         </nav>
     </header>
 
+
+    <h2 id="convNombre" class="my-0"> </h2>
+
     <div class="d-flex g-0 my-5 mx-auto justify-content-evenly">
         <button id="btnMetrosA" class="my-2">Conversor de metros a piletas</button>
         <button id="btnPiletasA" class="my-2">Conversor de piletas a metros</button>
