--- a/secciones/conversor_metros.html
+++ b/secciones/conversor_metros.html
@@ -7,7 +7,8 @@
     <title>Conversor</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body id="conversor">
@@ -23,7 +24,7 @@
                     <div class="navbar-nav mx-auto d-flex">
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     <a class="nav-link" href="../secciones/CRUD_rutina.html">Rutinas</a>
-                    <a class="nav-link" href="../secciones/conversor_metros.html">Conversor</a>
+                    <a id="conversorLink" class="nav-link" href="../secciones/conversor_metros.html">Conversor</a>
                     
                     </div>
                 </div>
@@ -32,7 +33,7 @@
     </header>
 
 
-    <h2 id="convNombre" class="my-0"> </h2>
+    <h2 id="convNombre" class="my-0" > </h2>
 
     <div class="d-flex g-0 my-5 mx-auto justify-content-evenly">
         <button id="btnMetrosA" class="my-2">Conversor de metros a piletas</button>
@@ -59,8 +60,10 @@
         </form>
     </div>
 
+
     <script src="../js/conversor_metros.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
 
