proyecto con fetch

--- a/secciones/CRUD_rutina.html
+++ b/secciones/CRUD_rutina.html
@@ -13,19 +13,19 @@
 </head>
 <body id="crud">
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid g-0 d-flex">
                 <a class="navbar-brand" href="#"></a>
-                <button id="hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button  class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse d-flex" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto d-flex">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                     <a class="nav-link" href="../secciones/CRUD_rutina.html">Rutinas</a>
                     <a class="nav-link" href="../secciones/conversor_metros.html">Conversor</a>
-                    
+                    <a class="nav-link" href="../secciones/elementos.html">Elementos</a>
                     </div>
                 </div>
             </div>
