--- a/secciones/elementos.html
+++ b/secciones/elementos.html
@@ -33,38 +33,10 @@
     </header>
 
 
-    <h2 id="convNombre" class="my-0" > </h2>
-
-    <div class="d-flex g-0 my-5 mx-auto justify-content-evenly">
-        <button id="btnMetrosA" class="my-2">Conversor de metros a piletas</button>
-        <button id="btnPiletasA" class="my-2">Conversor de piletas a metros</button>
-    </div>   
-    <div class="d-flex g-0 my-2 flex-column align-items-center">  
-        <form action="" id="formMetrosA">
-            <label for="">¿Cuántos metros quieres nadar? </label>
-            <input type="number" name="" id="inputMetrosA"><br><br>
-            <label for="">¿Cuántos metros mide tu pileta de natación?</label>
-            <input type="text" name="" id="inputMetrosPileta"><br><br>
-            <button id="botonEnviarMetrosA" >Enviar</button><br>
-            <h2 id="totalPiletas"></h2>
-        </form>
-    </div>
-    <div class="d-flex g-0 my-2 flex-column align-items-center">
-        <form action="" id="formPiletasA">
-            <label for="">¿Cuántas piletas quieres nadar? </label>
-            <input type="number" name="" id="inputPiletasA"><br><br>
-            <label for="">¿Cuántos metros mide tu pileta de natación?</label>
-            <input type="text" name="" id="inputMetrosPileta2"><br><br>
-            <button id="botonEnviarPiletasA" >Enviar</button><br>
-            <h2 id="totalMetros"></h2>
-        </form>
-    </div>
-
-    <script src="../js/conversor_metros.js"></script>
+    <script src="../js/elementos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </body>
 </html>
